--- a/package.json
+++ b/package.json
@@ -8,21 +8,29 @@
     "dev": "nitro dev --host",
     "build": "nitro build",
     "preview": "node .output/server/index.mjs",
-    "test": "vitest"
+    "test": "vitest",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "postinstall": "pnpm approve-builds"
   },
   "devDependencies": {
     "@ai-sdk/google": "~2.0.20",
-    "@shikijs/rehype": "^3.13.0",
+    "@shikijs/rehype": "~3.13.0",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/hast": "~3.0.0",
     "@types/mdast": "~4.0.0",
     "@types/node": "~24.8.0",
     "ai": "~5.0.75",
+    "better-sqlite3": "~12.4.0",
+    "dotenv": "~17.2.0",
+    "drizzle-kit": "~0.31.5",
+    "drizzle-orm": "~0.44.5",
     "h3": "~1.15.0",
     "nitropack": "~2.12.5",
     "rehype-stringify": "~10.0.0",
     "remark-parse": "~11.0.0",
     "remark-rehype": "~11.1.0",
-    "remark-stringify": "^11.0.0",
+    "remark-stringify": "~11.0.0",
     "unified": "~11.0.5",
     "vitest": "~3.2.0"
   },
