--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/hast": "~3.0.0",
     "@types/mdast": "~4.0.0",
     "@types/node": "~24.8.0",
+    "@types/pg": "^8.15.5",
     "ai": "~5.0.75",
     "better-sqlite3": "~12.4.0",
     "dotenv": "~17.2.0",
@@ -27,6 +28,8 @@
     "drizzle-orm": "~0.44.5",
     "h3": "~1.15.0",
     "nitropack": "~2.12.5",
+    "pg": "^8.16.3",
+    "redis": "^5.9.0",
     "rehype-stringify": "~10.0.0",
     "remark-parse": "~11.0.0",
     "remark-rehype": "~11.1.0",
