feat: fallback for redis and postgres

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "~17.2.0",
     "drizzle-kit": "~0.31.5",
     "drizzle-orm": "~0.44.5",
+    "happy-dom": "~20.0.10",
     "h3": "~1.15.0",
     "nitropack": "~2.12.5",
     "pg": "~8.16.0",
